--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
-Package: thesisdown
-Title: An updated R Markdown thesis template using the bookdown package
+Package: oak_thesisdown
+Title: An updated R Markdown thesis template using the bookdown and thesisdown package
 Version: 0.0.3
 Authors@R: c(
     person("Chester", "Ismay", email = "chester.ismay@gmail.com", role = "cre"),
@@ -8,7 +8,7 @@ Description: Using the bookdown package and LaTeX and Word thesis templates from
     Reed College, this package aims to encourage reproducible research using
     simple Markdown syntax while embedding all of the R code to produce plots
     and analyses as well.
-Maintainer: Chester Ismay <chester.ismay@gmail.com>
+Maintainer: Omkar A. Katta <omkarakatta@gmail.com>
 Depends:
     R (>= 3.2.0),
     remotes,
