--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: oak_thesisdown
+Package: OAKthesisdown
 Title: An updated R Markdown thesis template using the bookdown and thesisdown package
 Version: 0.0.3
 Authors@R: c(
